--- a/index.html
+++ b/index.html
@@ -1,1 +1,86 @@
 
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>teste</title>
+  </head>
+
+  <body>
+    
+    <header>
+      <h1>RECON<span>FOODS</span> </h1>
+      <p>Atendendimento de segunda a sabado das 8:00 às 17:30
+      </p>
+    </header>
+
+  <section>
+    <h2>Bolos</h2>
+
+      <ul>
+        <li>
+          <div class="details">
+            <h3 class="product tittle">Bolo de chocolate</h3>
+            <p class="description">
+              Bolo com 4 camadas de Recheio ao leite.
+            </p>
+          </div>
+
+          <strong class="price">
+            R$37.90kg
+          </strong>
+        </li>
+
+        <li>
+          <div class="details">
+            <h3 class="product tittle">Bolo de Laranja</h3>
+            <p class="description">
+              Um delicioso bolo de laranja com uma cremosa
+              cobertura de chocolate
+            </p>
+          </div>
+          <strong class="price">
+            R$26.90kg
+          </strong>
+        </li>
+
+        <li>
+          <div class="details">
+            <h3 class="product tittle">Marta Rocha</h3>
+            <p class="description">
+              Saboroso bolo com uma camada fofa de pão de ló preto, intercalado pelo pão de ló branco.
+            </p>
+          </div>
+          <strong class="price">
+            R$34.90kg
+          </strong>
+        </li>
+
+      </ul>
+
+  </section>
+
+  <section>
+    <h2>Bebidas</h2>
+
+      <ul>
+        <li>
+          <div class="details">
+            <h3 class="product tittle">Marta Rocha</h3>
+            <p class="description">
+             Refrigerante de latassssssssexpedita.
+            </p>
+          </div>
+          <strong class="price">
+            R$34.90kg
+          </strong>
+        </li>
+
+      </ul>
+
+  </section>
+
+
+  </body>
+</html>
