--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
@@ -16,44 +15,46 @@
     </header>
 
   <section>
-    <h2>Bolos</h2>
+    <h2>Sanduiches</h2>
 
       <ul>
         <li>
           <div class="details">
-            <h3 class="product tittle">Bolo de chocolate</h3>
+            <h3 class="product tittle">Sanduíche Natural</h3>
             <p class="description">
-              Bolo com 4 camadas de Recheio ao leite.
+              2 Fatias de pão integral, queijo, mortadela, alface,
+              pepino ou picles, tomate e um delicioso molho caseiro
             </p>
           </div>
 
           <strong class="price">
-            R$37.90kg
+            R$5.90
           </strong>
         </li>
 
         <li>
           <div class="details">
-            <h3 class="product tittle">Bolo de Laranja</h3>
+            <h3 class="product tittle">Sanduíche Natural Vegetariano</h3>
             <p class="description">
-              Um delicioso bolo de laranja com uma cremosa
-              cobertura de chocolate
+              2 Fatias de pão integral, queijo, ovo cozido, alface, tomate
+              pepino ou picles e maionese
             </p>
           </div>
           <strong class="price">
-            R$26.90kg
+            R$6.90
           </strong>
         </li>
 
         <li>
           <div class="details">
-            <h3 class="product tittle">Marta Rocha</h3>
+            <h3 class="product tittle">Sanduíche Natural Vegano</h3>
             <p class="description">
-              Saboroso bolo com uma camada fofa de pão de ló preto, intercalado pelo pão de ló branco.
+              2 Fatias de pão integral, cebola, alface,
+              cenoura e lascas de amêndoas
             </p>
           </div>
           <strong class="price">
-            R$34.90kg
+            R$8.90
           </strong>
         </li>
 
@@ -67,13 +68,25 @@
       <ul>
         <li>
           <div class="details">
-            <h3 class="product tittle">Marta Rocha</h3>
+            <h3 class="product tittle">Brownie</h3>
             <p class="description">
-             Refrigerante de latassssssssexpedita.
+             Uma deliciosa fatia de brownie, macia e gostosa.
             </p>
           </div>
           <strong class="price">
-            R$34.90kg
+            R$4.90
+          </strong>
+        </li>
+
+        <li>
+          <div class="details">
+            <h3 class="product tittle">Brownie recheado</h3>
+            <p class="description">
+             Fatia de Brownie recheado (sabor a sua escolha)
+            </p>
+          </div>
+          <strong class="price">
+            R$9.90
           </strong>
         </li>
 
