--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
 
   <body>
-    
+    <div class="quadradoprincipal"> 
     <header>
-      <h1>RECON<span>FOODS</span> </h1>
+      <h1>SWEET<span>SUMMER</span> </h1>
       <p>Atendendimento de segunda a sabado das 8:00 às 17:30
       </p>
     </header>
@@ -64,7 +64,7 @@
   </section>
 
   <section>
-    <h2>Bebidas</h2>
+    <h2>Doces</h2>
 
       <ul>
         <li>
@@ -91,10 +91,21 @@
           </strong>
         </li>
 
+        <li>
+          <div class="details">
+            <h3 class="product tittle">Fatia de Brownie</h3>
+            <p class="description">
+             Fatia de Brownie com cobertura de nutella com morango
+           </p>
+          </div>
+          <strong class="price">
+            R$12.90
+          </strong>
+        </li>
       </ul>
 
   </section>
-
+    </div>
 
   </body>
 </html>
